Add claims principal testing support
